--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -17,6 +17,14 @@
 <p>Glyphs Changelog</p>
 </block>
 
+<label>Version 1.16 (12/1/2015)</label>
+<fieldset>
+<div>
+<p>Allow installation on any iOS version</p>
+<p>Please report bugs</p>
+</div>
+</fieldset>
+
 <label>Version 1.15 (11/17/2015)</label>
 <fieldset>
 <div>
@@ -34,7 +42,7 @@
 <label>Version 1.13 (10/31/15)</label>
 <fieldset>
 <div>
-<p>Activator Fix (Anemone only because Winterboard can't theme Activator)</p>
+<p>Activator Fix (Anemone only. Winterboard can't theme Activator)</p>
 </div>
 </fieldset>
 
