Update cjGlyphs to 1.33
Added AppDrawer, Outlook, OneDrive, OneNote, GarageBand, Keynote,
Steam, Flow, Flow ALT, Infuse, PicsPlay

--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,15 @@
 <p>cjGlyphs Changelog</p>
 </block>
 
+<label>Version 1.33 (12/12/2015)</label>
+<fieldset>
+<div>
+<p></p>
+<p>Added AppDrawer, Outlook, OneDrive, OneNote, GarageBand, Keynote, Steam, Flow, Flow ALT, Infuse, PicsPlay</p>
+<p></p>
+</div>
+</fieldset>
+
 <label>Version 1.32 (11/17/2015)</label>
 <fieldset>
 <div>
