--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -17,6 +17,13 @@
 <p>Glyphs Changelog</p>
 </block>
 
+<label>Version 1.17 (12/19/2015)</label>
+<fieldset>
+<div>
+<p>Tweetbot 4 Icon</p>
+</div>
+</fieldset>
+
 <label>Version 1.16 (12/1/2015)</label>
 <fieldset>
 <div>
