--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,15 @@
 <p>cjGlyphs Changelog</p>
 </block>
 
+<label>Version 1.34 (12/19/2015)</label>
+<fieldset>
+<div>
+<p></p>
+<p>Added OnePassword, Google Calendar, Spark Email, Comet, Yelp</p>
+<p></p>
+</div>
+</fieldset>
+
 <label>Version 1.33 (12/12/2015)</label>
 <fieldset>
 <div>
