Tons of stuff. Expand for more info
cjGlyphs 1.35
Black Version and 19 new icons

Glyphs 1.18
Black Version

Help page for FAQs

Small changes to README.md

--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,60 +17,56 @@
 <p>cjGlyphs Changelog</p>
 </block>
 
+<label>Version 1.35 (12/26/2015)</label>
+<fieldset>
+<div>
+<p>Added Black Version (I haven't tested this much. Please report any issues.)</p>
+<p>Added 19 new icons: AntRec, Terminal, Appster, JW Library, CloudBeats, Chunky Comic Reader, PDF Expert 5, Bundlr, MovieBox, Alto's Adventure, Screenshot Maker Pro, Glit, CVS Pharmacy, USAA, Venmo, Citi, Line, Viber, Camfrog</p>
+</div>
+</fieldset>
+
 <label>Version 1.34 (12/19/2015)</label>
 <fieldset>
 <div>
-<p></p>
 <p>Added OnePassword, Google Calendar, Spark Email, Comet, Yelp</p>
-<p></p>
 </div>
 </fieldset>
 
 <label>Version 1.33 (12/12/2015)</label>
 <fieldset>
 <div>
-<p></p>
 <p>Added AppDrawer, Outlook, OneDrive, OneNote, GarageBand, Keynote, Steam, Flow, Flow ALT, Infuse, PicsPlay</p>
-<p></p>
 </div>
 </fieldset>
 
 <label>Version 1.32 (11/17/2015)</label>
 <fieldset>
 <div>
-<p></p>
 <p>WB Calendar Fix</p>
-<p></p>
 </div>
 </fieldset>
 
 <label>Version 1.31 (11/14/2015)</label>
 <fieldset>
 <div>
-<p></p>
 <p>Added Geekbench, XE Currency, Khan Academy</p>
 <p>WB Clock Fix</p>
-<p></p>
 </div>
 </fieldset>
 
 <label>Version 1.30 (11/13/2015)</label>
 <fieldset>
 <div>
-<p></p>
 <p>Added Filza, iStudent App, Wikipedia</p>
 <p>Depiction Changes</p>
-<p></p>
 </div>
 </fieldset>
 
 <label>Version 1.29 (11/12/2015)</label>
 <fieldset>
 <div>
-<p></p>
 <p>Updated OpenTable, News (Old icon is now ALT)</p>
 <p>Added Swagbucks, Skype, Apple Store, Anemone ALT</p>
-<p></p>
 </div>
 </fieldset>
 
