--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -17,6 +17,13 @@
 <p>Glyphs Changelog</p>
 </block>
 
+<label>Version 1.18 (12/26/2015)</label>
+<fieldset>
+<div>
+<p>Added Black Version (I haven't tested this much. Please report any issues.)</p>
+</div>
+</fieldset>
+
 <label>Version 1.17 (12/19/2015)</label>
 <fieldset>
 <div>
