--- a/depictions/com.cj81499.cjGlyphs/index.html
+++ b/depictions/com.cj81499.cjGlyphs/index.html
@@ -53,6 +53,18 @@
 
 <label>Other</label>
 <fieldset>
+
+<a href="/depictions/resources/help.html">
+<img class="icon" src="../resources/icons/help.png" width="58" height="58">
+<div>
+<div>
+<label>
+<p>Help</p>
+</label>
+</div>
+</div>
+</a>
+
 <a href="/depictions/resources/donate.html">
 <img class="icon" src="../resources/icons/donate.png" width="58" height="58">
 <div>
@@ -63,6 +75,7 @@
 </div>
 </div>
 </a>
+
 <a href="/depictions/resources/contact.html">
 <img class="icon" src="../resources/icons/contact.png" width="58" height="58">
 <div>
@@ -73,6 +86,7 @@
 </div>
 </div>
 </a>
+
 </fieldset>
 
 </panel>
