--- a/depictions/com.tokems.Glyphs/index.html
+++ b/depictions/com.tokems.Glyphs/index.html
@@ -52,6 +52,18 @@
 
 <label>Other</label>
 <fieldset>
+
+<a href="/depictions/resources/help.html">
+<img class="icon" src="../resources/icons/help.png" width="58" height="58">
+<div>
+<div>
+<label>
+<p>Help</p>
+</label>
+</div>
+</div>
+</a>
+
 <a href="/depictions/resources/donate.html">
 <img class="icon" src="../resources/icons/donate.png" width="58" height="58">
 <div>
@@ -62,6 +74,7 @@
 </div>
 </div>
 </a>
+
 <a href="/depictions/resources/contact.html">
 <img class="icon" src="../resources/icons/contact.png" width="58" height="58">
 <div>
@@ -72,6 +85,7 @@
 </div>
 </div>
 </a>
+
 </fieldset>
 
 </panel>
