Organize, add help icon, update help, minor updates to some depictions.

--- a/depictions/com.cj81499.cjGlyphs/index.html
+++ b/depictions/com.cj81499.cjGlyphs/index.html
@@ -18,12 +18,11 @@
 <label>Info</label>
 <fieldset>
 <div>
-<p>This theme was made by and is being hosted by cj81499 (<a href="https://twitter.com/cjMakesIcons" target="_new">Twitter</a>).</p>
+<p>This theme was made by and is being hosted by cj81499.</p>
 <p><a href="https://www.reddit.com/r/iOSthemes/comments/2r45jz/custom_glyphsgotham_icons/" target="_new">Reddit Post</a></p>
 <p><a href="https://docs.google.com/document/d/1J-kl6YXp7kNIt1NaXjKfahUIaFV-T-N2SPfaSK5m4Ns/edit?pli=1" target=new> Icon Requests</a></p>
-<p><a href="https://docs.google.com/document/d/1NRvxjSBnftz0llgaaWvURaQ0wTgryCds0VaSVv2lM7E/edit?usp=sharing" target="_new">Troubleshooting</a>.</p>
-<p>If you want to use the included icons for something, contact me by email (<a href="mailto:cjMakesIcons@gmail.com" target="_new">cjMakesIcons@gmail.com</a>) and ask permission.</p>
-<p>If you post a setup using this pack, I appreciate being credited. I'm <a href="https://www.reddit.com/user/cj81499" target="_new">/u/cj81499</a> on reddit.</p>
+<p>If you want to use the included icons for something, contact me and ask permission.</p>
+<p>If you post a setup using this pack, I appreciate being credited. I'm <a href="https://www.reddit.com/user/cj81499" target="_new">/u/cj81499</a> on Reddit and <a href="https://twitter.com/cjMakesIcons" target="_new">@cjMakesIcons</a> on Twitter.</p>
 </div>
 <a href="./screenshots.html">
 <img class="icon" src="../resources/icons/screenshots.png" width="58" height="58">
