--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -17,6 +17,13 @@
 <p>Glyphs Changelog</p>
 </block>
 
+<label>Version 1.19 (__/__/____)</label>
+<fieldset>
+<div>
+<p>Respring Logo is now it's own theme</p>
+</div>
+</fieldset>
+
 <label>Version 1.18 (12/26/2015)</label>
 <fieldset>
 <div>
@@ -42,7 +49,7 @@
 <label>Version 1.15 (11/17/2015)</label>
 <fieldset>
 <div>
-<p>WB Clock Fix</p>
+<p>Winterboard Clock Fix</p>
 </div>
 </fieldset>
 
