--- a/depictions/resources/contact.html
+++ b/depictions/resources/contact.html
@@ -17,7 +17,7 @@
 <fieldset><div><div><label>
     <p>Email - <a href="mailto:cjMakesIcons@gmail.com" target="_new">cjMakesIcons@gmail.com</a></p>
     <p>Reddit - <a href="https://www.reddit.com/user/cj81499" target="_new">/u/cj81499</a></p>
-    <p>Twitter - <a href="https://twitter.com/cjMakesIcons" target="_new">cjMakesIcons</a></p>
+    <p>Twitter - <a href="https://twitter.com/cjMakesIcons" target="_new">@cjMakesIcons</a></p>
 </label></div></div></fieldset>
 </panel>
 </body>
