--- a/depictions/resources/help.html
+++ b/depictions/resources/help.html
@@ -15,20 +15,46 @@
         <label>All Themes</label>
             <fieldset>
                 <div>
-                    <p>Anemone</p>
+                    <p>Reinstall the theme and Winterboard/ Anemone</p>
+                </div>
+                <div>
+                    <p>Anemone:</p>
                     <p>Use with "WB Patch" disabled</p>
                 </div>
                 <div>
-                    <p>Winterboard</p>
-                    <p>Use with "WB Patch" enabled above all other themes</p>
+                    <p>Winterboard:</p>
+                    <p>Enable "WB Patch" above all other themes (assuming the theme includes one)</p>
+                    <p>Install Custom Clock Icon or CustomClock</p>
+                    <p>Install IconBundles</p>
                 </div>
             </fieldset>
 
         <label>Glyphs/cjGlyphs</label>
             <fieldset>
                 <div>
-                    <p>Black</p>
+                    <p>General:</p>
+                    <p>Enable both cjGlyphs and Glyphs</p>
+                    <p>Put cjGlyphs above Glyphs</p>
+                    <p>Check for updates</p>
+                    <p>Use Anemone instead of Winterboard</p>
+                </div>
+                <div>
+                    <p>Black Version:</p>
                     <p>Use instead of normal base theme.</p>
+                </div>
+            </fieldset>
+
+        <label>Activator Icon</label>
+            <fieldset>
+                <div>
+                    <p>Follow <a href="https://www.reddit.com/r/iOSthemes/comments/2rdwdp/me1_activator_icon0_how_to_theme_the_stubborn/?" target="_new">this tutorial</a> for Activator to be themed.</p>
+                </div>
+            </fieldset>
+        
+        <label>If All Else Fails</label>
+            <fieldset>
+                <div>
+                    <p><a href="https://cj81499.github.io/depictions/contact.html" target="_new">Contact Me</a></p>
                 </div>
             </fieldset>
     </panel>
