Update Mandolino, SpaceBlueBerry

--- a/depictions/com.highdetalio.SpaceBlueBerry/changelog.html
+++ b/depictions/com.highdetalio.SpaceBlueBerry/changelog.html
@@ -17,6 +17,13 @@
 <p>SpaceBlueBerry Changelog</p>
 </block>
 
+<label>Version 1.7 (_/_/_)</label>
+<fieldset>
+<div>
+<p>Winterboard Clock Fixes</p>
+</div>
+</fieldset>
+
 <label>Version 1.6 (11/1/2015)</label>
 <fieldset>
 <div>
