--- a/depictions/com.jacopoiuytr.Mandolino/changelog.html
+++ b/depictions/com.jacopoiuytr.Mandolino/changelog.html
@@ -17,6 +17,13 @@
 <p>Mandolino Changelog</p>
 </block>
 
+<label>Version 1.4 (_/_/_)</label>
+<fieldset>
+<div>
+<p>Winterboard Clock Fixes</p>
+</div>
+</fieldset>
+
 <label>Version 1.3 (11/1/2015)</label>
 <fieldset>
 <div>
