--- a/depictions/com.highdetalio.SpaceBlueBerry/changelog.html
+++ b/depictions/com.highdetalio.SpaceBlueBerry/changelog.html
@@ -17,7 +17,7 @@
 <p>SpaceBlueBerry Changelog</p>
 </block>
 
-<label>Version 1.7 (_/_/_)</label>
+<label>Version 1.7 (12/28/2015)</label>
 <fieldset>
 <div>
 <p>Winterboard Clock Fixes</p>
