--- a/depictions/com.jacopoiuytr.Mandolino/changelog.html
+++ b/depictions/com.jacopoiuytr.Mandolino/changelog.html
@@ -17,7 +17,7 @@
 <p>Mandolino Changelog</p>
 </block>
 
-<label>Version 1.4 (_/_/_)</label>
+<label>Version 1.4 (12/28/2015)</label>
 <fieldset>
 <div>
 <p>Winterboard Clock Fixes</p>
