--- a/depictions/resources/help.html
+++ b/depictions/resources/help.html
@@ -15,7 +15,8 @@
         <label>All Themes</label>
             <fieldset>
                 <div>
-                    <p>Reinstall the theme and Winterboard/ Anemone</p>
+                    <p>Try reinstalling the theme and Winterboard/ Anemone</p>
+                    <p>Check for updates</p>
                 </div>
                 <div>
                     <p>Anemone:</p>
@@ -24,7 +25,7 @@
                 <div>
                     <p>Winterboard:</p>
                     <p>Enable "WB Patch" above all other themes (assuming the theme includes one)</p>
-                    <p>Install Custom Clock Icon or CustomClock</p>
+                    <p>Install <a href="https://cydia//package/com.bensge.customclockicon" target="_new">Custom Clock Icon</a> or <a href="https://cydia//package/org.coolstar.customclock" target="_new">CustomClock</a> for the clock hands to be themed</p>
                     <p>Install IconBundles</p>
                 </div>
             </fieldset>
@@ -35,8 +36,6 @@
                     <p>General:</p>
                     <p>Enable both cjGlyphs and Glyphs</p>
                     <p>Put cjGlyphs above Glyphs</p>
-                    <p>Check for updates</p>
-                    <p>Use Anemone instead of Winterboard</p>
                 </div>
                 <div>
                     <p>Black Version:</p>
