--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -17,10 +17,11 @@
 <p>Glyphs Changelog</p>
 </block>
 
-<label>Version 1.19 (__/__/____)</label>
+<label>Version 1.19 (1/9/2016)</label>
 <fieldset>
 <div>
 <p>Respring Logo is now it's own theme</p>
+<p>Size Optimizations (I forgot to optimize black version last time)</p>
 </div>
 </fieldset>
 
