--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,14 @@
 <p>cjGlyphs Changelog</p>
 </block>
 
+<label>Version 1.36 (1/10/2016)</label>
+<fieldset>
+<div>
+<p>Added Calendars by Readdle, Rhapsody, Star Wars: Commander, Practice+, Twitterrific, Pangu ALT, Mathletics Student, Creepy Pasta Wiki, Puffin Browser, Agape, PlayStation ALT</p>
+<p>Updated Tweetbot</p>
+</div>
+</fieldset>
+
 <label>Version 1.35 (12/26/2015)</label>
 <fieldset>
 <div>
