--- a/depictions/com.cj81499.cjMandolino/changelog.html
+++ b/depictions/com.cj81499.cjMandolino/changelog.html
@@ -17,6 +17,13 @@
       <p>cjMandolino Changelog</p>
     </block>
 
+    <label>Version 1.4 (1/30/2016)</label>
+    <fieldset>
+      <div>
+        <p>Fix theScore</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.3 (1/27/2016)</label>
     <fieldset>
       <div>
