cjGlyphs 1.38 and Glyphs 1.20
Clock Changes (Good ones)

Thanks to Joel49 for telling me this was possible.

--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -17,6 +17,13 @@
       <p>Glyphs Changelog</p>
     </block>
 
+    <label>Version 1.20 (1/31/2016)</label>
+    <fieldset>
+      <div>
+        <p>Changed Clock</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.19 (1/9/2016)</label>
     <fieldset>
       <div>
