--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,13 @@
       <p>cjGlyphs Changelog</p>
     </block>
 
+    <label>Version 1.38 (1/31/2016)</label>
+    <fieldset>
+      <div>
+        <p>Changed Clock</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.37 (1/28/2016)</label>
     <fieldset>
       <div>
