Minor Depic update

--- a/depictions/com.cj81499.cjGlyphs/index.html
+++ b/depictions/com.cj81499.cjGlyphs/index.html
@@ -23,7 +23,7 @@
         <p><a href="https://docs.google.com/document/d/1J-kl6YXp7kNIt1NaXjKfahUIaFV-T-N2SPfaSK5m4Ns/edit?pli=1" target=new> Icon Requests</a></p>
         <p>If you want to use the included icons for something, contact me and ask permission.</p>
         <p>If you post a setup using this pack, I appreciate being credited. I'm <a href="https://www.reddit.com/user/cj81499" target="_new">/u/cj81499</a> on Reddit and <a href="https://twitter.com/cjMakesIcons" target="_new">@cjMakesIcons</a> on Twitter.</p>
-        <p>Alternate icons have "ALT" after the @2x.</p>
+        <p>Alternate icons have "ALT" after the @2x. When I update icons, the old one becomes an ALT. Sometimes, I make ALTs to fit my personal taste, not to replace existing icons.</p>
       </div>
       <a href="./screenshots.html">
         <img class="icon" src="../resources/icons/screenshots.png" width="58" height="58">
