--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -20,7 +20,7 @@
     <label>Version 1.38 (1/31/2016)</label>
     <fieldset>
       <div>
-        <p>Changed Clock</p>
+        <p>Updated Clock</p>
       </div>
     </fieldset>
 
@@ -87,7 +87,7 @@
     <label>Version 1.29 (11/12/2015)</label>
     <fieldset>
       <div>
-        <p>Updated OpenTable, News (Old icon is now ALT)</p>
+        <p>Updated OpenTable, News</p>
         <p>Added Swagbucks, Skype, Apple Store, Anemone ALT</p>
       </div>
     </fieldset>
