Glyphs 1.21 and cjGlyphs 1.39
Glyphs:

Fixed some compatibility issues with older iOS versions

cjGlyphs:

Added BiteSMS (And 2 ALTs)
Updated Uber

--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,14 @@
       <p>cjGlyphs Changelog</p>
     </block>
 
+    <label>Version 1.39 (2/??/2016)</label>
+    <fieldset>
+      <div>
+        <p>Added BiteSMS (And 2 ALTs)</p>
+        <p>Updated Uber</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.38 (1/31/2016)</label>
     <fieldset>
       <div>
