--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -17,6 +17,13 @@
       <p>Glyphs Changelog</p>
     </block>
 
+    <label>Version 1.21 (2/23/2016)</label>
+    <fieldset>
+      <div>
+        <p>Fixed some compatibility issues with older iOS versions</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.20 (1/31/2016)</label>
     <fieldset>
       <div>
