Forgot to document some changes I made to cjGlyphs but I just remembered

--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -20,8 +20,8 @@
     <label>Version 1.39 (2/??/2016)</label>
     <fieldset>
       <div>
-        <p>Added BiteSMS (And 2 ALTs)</p>
-        <p>Updated Uber</p>
+        <p>Added BiteSMS (And 2 ALTs), Boom Beach, Submarine</p>
+        <p>Updated Uber, Tips</p>
       </div>
     </fieldset>
 
