--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,7 +17,16 @@
       <p>cjGlyphs Changelog</p>
     </block>
 
-    <label>Version 1.39 (2/??/2016)</label>
+    <label>Version 1.40 (3/6/2016)</label>
+    <fieldset>
+      <div>
+        <p>Added TestFlight</p>
+        <p>Updated Passbook (I'm finally happy with its icon. This one is here to stay.)</p>
+        <p>Fixed Info.plist issues</p>
+      </div>
+    </fieldset>
+
+    <label>Version 1.39 (2/24/2016)</label>
     <fieldset>
       <div>
         <p>Added BiteSMS (And 2 ALTs), Boom Beach, Submarine</p>
