change address and reword stuff

--- a/other/jbRules.html
+++ b/other/jbRules.html
@@ -20,12 +20,12 @@
     <label>Rules</label>
     <fieldset>
       <div>
-        <p>1. No NSFW (not safe for work) content is allowed.</p>
+        <p>1. NSFW (not safe for work) content is not allowed.</p>
         <p>2. Trolling (such as spamming) will not be tolerated.</p>
         <p>3. Keep conversation on controversial topics to a minimum.</p>
         <p>4. Respect the opinions of others.</p>
         <p>5. Hate talk (such as racial slurs or name calling) is forbidden.</p>
-        <p>6. No piracy is allowed.</p>
+        <p>6. Piracy is not allowed.</p>
         <p>7. Be a kind person. Have fun and enjoy yourself.</p>
         <br>
         <p>If you have any questions or concerns, please contact an admin via a direct message.</p>
