Glyphs 1.22 and cjGlyphs 1.41
Glyphs
Updated iCleaner Pro

cjGlyphs
Added Tinder ;)

--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -17,6 +17,13 @@
       <p>Glyphs Changelog</p>
     </block>
 
+    <label>Version 1.22 (3/17/2016)</label>
+    <fieldset>
+      <div>
+        <p>Updated iCleaner Pro</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.21 (2/23/2016)</label>
     <fieldset>
       <div>
