--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,13 @@
       <p>cjGlyphs Changelog</p>
     </block>
 
+    <label>Version 1.41 (3/6/2016)</label>
+    <fieldset>
+      <div>
+        <p>Added Tinder ;)</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.40 (3/6/2016)</label>
     <fieldset>
       <div>
