--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,14 @@
       <p>cjGlyphs Changelog</p>
     </block>
 
+    <label>Version 1.42 (3/19/2016)</label>
+    <fieldset>
+      <div>
+        <p>Added Desmos, Discord, Plague Inc, Clash Royale, Puzzle Forge II</p>
+        <p>Updated AfterLight, Spark</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.41 (3/6/2016)</label>
     <fieldset>
       <div>
