Minor groupchat rules update

--- a/other/jbRules.html
+++ b/other/jbRules.html
@@ -35,7 +35,7 @@
     <label>What If A User Breaks A Rule?</label>
     <fieldset>
       <div>
-        <p>If an admin does not notice a rule being broken, and you do, please report it via a direct message to an admin.</p>
+        <p>If an admin does not notice a rule being broken, and you do, please report it using /report or, if it's not working, a direct message to an admin.</p>
         <p>The first time a user breaks a rule, the user will be given a warning.</p>
         <p>If the user breaks a rule again, the user will be removed for one day.</p>
         <p>After breaking a rule for the third time, the user will be permanently banned.</p>
@@ -46,8 +46,8 @@
     <fieldset>
       <div>
         <p>You can disable Telegram notifications just for this chat by clicking on the top bar and choosing Mute.</p>
-        <p>Mentions (using @someusername) and replies (click and hold on a message, then select reply) will notify a user even if that person has notifications turned off for the chat.</p>
-        <p>You can tell who is an admin by looking at the group info.</p>
+        <p>Mentions (using @someusername) and replies (tap and hold or double tap on a message, then select reply) will notify a user even if that person has notifications turned off for the chat.</p>
+        <p>You can tell who is an admin by looking at the group info, or using /rules.</p>
       </div>
     </fieldset>
 
