--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,14 @@
       <p>cjGlyphs Changelog</p>
     </block>
 
+    <label>Version 1.43 (4/6/2016)</label>
+    <fieldset>
+      <div>
+        <p>Added Game 4 2, Fussball.de, Kicktipp, Flashscore, Multi-Year Weight Training, Quizduell, Spiegel Online, Spox, Comdirect Banking</p>
+        <p>Updated Clash Royale, iCleaner Pro, Passbook/Wallet (I was wrong about being happy. I think I am now though.)</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.42 (3/19/2016)</label>
     <fieldset>
       <div>
@@ -36,7 +44,7 @@
     <fieldset>
       <div>
         <p>Added TestFlight</p>
-        <p>Updated Passbook (I'm finally happy with its icon. This one is here to stay.)</p>
+        <p>Updated Passbook/Wallet (I'm finally happy with its icon. This one is here to stay.)</p>
         <p>Fixed Info.plist issues</p>
       </div>
     </fieldset>
@@ -155,7 +163,7 @@
     <label>Version 1.24 (10/17/15)</label>
     <fieldset>
       <div>
-        <p>Add iOS 9 Icons (News, Wallet, iCloud Drive)</p>
+        <p>Add iOS 9 Icons (News, Passbook/Wallet, iCloud Drive)</p>
       </div>
     </fieldset>
 
