--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,14 @@
       <p>cjGlyphs Changelog</p>
     </block>
 
+    <label>Version 1.44 (6/6/2016)</label>
+    <fieldset>
+      <div>
+        <p>Added Reddit, Dexter, Dolphin, Teal, New Scientist</p>
+        <p>Updated Apple Watch</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.43 (4/6/2016)</label>
     <fieldset>
       <div>
@@ -52,7 +60,7 @@
     <label>Version 1.39 (2/24/2016)</label>
     <fieldset>
       <div>
-        <p>Added BiteSMS (And 2 ALTs), Boom Beach, Submarine</p>
+        <p>Added BiteSMS, Boom Beach, Submarine</p>
         <p>Updated Uber, Tips</p>
       </div>
     </fieldset>
@@ -74,7 +82,7 @@
     <label>Version 1.36 (1/10/2016)</label>
     <fieldset>
       <div>
-        <p>Added Calendars by Readdle, Rhapsody, Star Wars: Commander, Practice+, Twitterrific, Pangu ALT, Mathletics Student, Creepy Pasta Wiki, Puffin Browser, Agape, PlayStation ALT</p>
+        <p>Added Calendars by Readdle, Rhapsody, Star Wars: Commander, Practice+, Twitterrific, Mathletics Student, Creepy Pasta Wiki, Puffin Browser, Agape</p>
         <p>Updated Tweetbot</p>
       </div>
     </fieldset>
@@ -97,7 +105,7 @@
     <label>Version 1.33 (12/12/2015)</label>
     <fieldset>
       <div>
-        <p>Added AppDrawer, Outlook, OneDrive, OneNote, GarageBand, Keynote, Steam, Flow, Flow ALT, Infuse, PicsPlay</p>
+        <p>Added AppDrawer, Outlook, OneDrive, OneNote, GarageBand, Keynote, Steam, Flow, Infuse, PicsPlay</p>
       </div>
     </fieldset>
 
@@ -128,7 +136,7 @@
     <fieldset>
       <div>
         <p>Updated OpenTable, News</p>
-        <p>Added Swagbucks, Skype, Apple Store, Anemone ALT</p>
+        <p>Added Swagbucks, Skype, Apple Store</p>
       </div>
     </fieldset>
 
