--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -17,6 +17,13 @@
       <p>Glyphs Changelog</p>
     </block>
 
+    <label>Version 1.23 (6/17/2016)</label>
+    <fieldset>
+      <div>
+        <p>Added Hide Icon Labels (Anemone Only)</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.22 (3/17/2016)</label>
     <fieldset>
       <div>
@@ -100,7 +107,7 @@
     <fieldset>
       <div>
         <p>New Depiction</p>
-        <p>Add Polus CC Theme</p>
+        <p>Added Polus CC Theme</p>
       </div>
     </fieldset>
 
@@ -146,7 +153,7 @@
     <label>Version 1.2 (8/21/15)</label>
     <fieldset>
       <div>
-        <p>Add Control Center Theme</p>
+        <p>Added Control Center Theme</p>
       </div>
     </fieldset>
 
