--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,13 @@
       <p>cjGlyphs Changelog</p>
     </block>
 
+    <label>Version 1.45 (6/6/2016)</label>
+    <fieldset>
+      <div>
+        <p>Added Paper by 53, Enlight, Pokemon GO, Snapseed</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.44 (6/6/2016)</label>
     <fieldset>
       <div>
