--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -17,6 +17,13 @@
       <p>Glyphs Changelog</p>
     </block>
 
+    <label>Version 1.24 (6/17/2016)</label>
+    <fieldset>
+      <div>
+        <p>Fix .DS_Store issue(?)</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.23 (6/17/2016)</label>
     <fieldset>
       <div>
