--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,7 +17,14 @@
       <p>cjGlyphs Changelog</p>
     </block>
 
-    <label>Version 1.45 (6/6/2016)</label>
+    <label>Version 1.46 (8/17/2016)</label>
+    <fieldset>
+      <div>
+        <p>Added Cut the Rope, Piano Tiles, Photoshop Mobile, Psych, Quizlet, Quizup, Road Trip 2, Union</p>
+      </div>
+    </fieldset>
+
+    <label>Version 1.45 (8/11/2016)</label>
     <fieldset>
       <div>
         <p>Added Paper by 53, Enlight, Pokemon GO, Snapseed</p>
