--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,13 @@
       <p>cjGlyphs Changelog</p>
     </block>
 
+    <label>Version 1.47 (8/22/2016)</label>
+    <fieldset>
+      <div>
+        <p>Dependency changes. Should default to Anemone instead of Winterboard now.</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.46 (8/17/2016)</label>
     <fieldset>
       <div>
