Updates to lots of stuff
Dependency changes. Should default to Anemone instead of Winterboard
now.

I probably did something wrong, so bear with me for a bit if stuff
isn’t working

--- a/depictions/com.cj81499.OriginalAnemone/changelog.html
+++ b/depictions/com.cj81499.OriginalAnemone/changelog.html
@@ -17,6 +17,13 @@
       <p>Original Anemone Changelog</p>
     </block>
 
+    <label>Version 1.1 (8/22/2016)</label>
+    <fieldset>
+      <div>
+        <p>Dependency changes. Should default to Anemone instead of Winterboard now.</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.0 (12/8/15)</label>
     <fieldset>
       <div>
