--- a/depictions/com.cj81499.cjOdin/changelog.html
+++ b/depictions/com.cj81499.cjOdin/changelog.html
@@ -17,6 +17,13 @@
       <p>cjOdin Changelog</p>
     </block>
 
+    <label>Version 1.2 (8/22/2016)</label>
+    <fieldset>
+      <div>
+        <p>Dependency changes. Should default to Anemone instead of Winterboard now.</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.1 (11/22/15)</label>
     <fieldset>
       <div>
