--- a/other/jbRules.html
+++ b/other/jbRules.html
@@ -20,13 +20,11 @@
     <label>Rules</label>
     <fieldset>
       <div>
-        <p>1. NSFW (not safe for work) content is not allowed.</p>
-        <p>2. Trolling (such as spamming) will not be tolerated.</p>
+        <p>1. NSFW content is not allowed.</p>
+        <p>2. Trolling and spamming are not allowed.</p>
         <p>3. Keep conversation on controversial topics to a minimum.</p>
-        <p>4. Respect the opinions of others.</p>
-        <p>5. Hate talk (such as racial slurs or name calling) is forbidden.</p>
-        <p>6. Piracy is not allowed.</p>
-        <p>7. Be a kind person. Have fun and enjoy yourself.</p>
+        <p>4. Be a kind person and respect the opinions of others. Hate talk and racial slurs are forbidden.</p>
+        <p>5. Piracy is not supported. General discussions about piracy are allowed, but you are not allowed to link to pirate repos or pirated packages. Encouraging users to pirate is not allowed.</p>
         <br>
         <p>If you have any questions or concerns, please contact an admin via a direct message.</p>
       </div>
@@ -35,10 +33,11 @@
     <label>What If A User Breaks A Rule?</label>
     <fieldset>
       <div>
-        <p>If an admin does not notice a rule being broken, and you do, please report it using /report or, if it's not working, a direct message to an admin.</p>
-        <p>The first time a user breaks a rule, the user will be given a warning.</p>
-        <p>If the user breaks a rule again, the user will be removed for one day.</p>
-        <p>After breaking a rule for the third time, the user will be permanently banned.</p>
+        <p>First Violation - Warning</p>
+        <p>Second Violation - 24 Hour Ban</p>
+        <p>Third Violation - Permanent Ban</p>
+        <br>
+        <p>If an admin isn't handling it already, use the /report command.</p>
       </div>
     </fieldset>
 
@@ -47,7 +46,7 @@
       <div>
         <p>You can disable Telegram notifications just for this chat by clicking on the top bar and choosing Mute.</p>
         <p>Mentions (using @someusername) and replies (tap and hold or double tap on a message, then select reply) will notify a user even if that person has notifications turned off for the chat.</p>
-        <p>You can tell who is an admin by looking at the group info, or using /rules.</p>
+        <p>You can tell who is an admin by using /admins.</p>
       </div>
     </fieldset>
 
