--- a/other/jbRules.html
+++ b/other/jbRules.html
@@ -25,7 +25,8 @@
         <p>3. Keep conversation on controversial topics to a minimum.</p>
         <p>4. Be a kind person and respect the opinions of others. Hate talk and racial slurs are forbidden.</p>
         <p>5. Piracy is not supported. General discussions about piracy are allowed, but you are not allowed to link to pirate repos or pirated packages. Encouraging users to pirate is not allowed.</p>
-        <br>
+      </div>
+      <div>
         <p>If you have any questions or concerns, please contact an admin via a direct message.</p>
       </div>
     </fieldset>
@@ -36,7 +37,8 @@
         <p>First Violation - Warning</p>
         <p>Second Violation - 24 Hour Ban</p>
         <p>Third Violation - Permanent Ban</p>
-        <br>
+      </div>
+      <div>
         <p>If an admin isn't handling it already, use the /report command.</p>
       </div>
     </fieldset>
@@ -45,7 +47,11 @@
     <fieldset>
       <div>
         <p>You can disable Telegram notifications just for this chat by clicking on the top bar and choosing Mute.</p>
+      </div>
+      <div>
         <p>Mentions (using @someusername) and replies (tap and hold or double tap on a message, then select reply) will notify a user even if that person has notifications turned off for the chat.</p>
+      </div>
+      <div>
         <p>You can tell who is an admin by using /admins.</p>
       </div>
     </fieldset>
