--- a/depictions/resources/help.html
+++ b/depictions/resources/help.html
@@ -26,7 +26,7 @@
 				<p>Winterboard:</p>
 				<p>Enable "WB Patch" above all other themes (assuming the theme includes one)</p>
 				<p>Install <a href="https://cydia//package/com.bensge.customclockicon" target="_new">Custom Clock Icon</a> or <a href="https://cydia//package/org.coolstar.customclock" target="_new">CustomClock</a> for the clock hands to be themed</p>
-				<p>Install IconBundles</p>
+				<p>Try Anemone instead</p>
 			</div>
 		</fieldset>
 
