--- a/other/jbRules.html
+++ b/other/jbRules.html
@@ -24,7 +24,7 @@
         <p>2. Trolling and spamming are not allowed.</p>
         <p>3. Keep conversation on controversial topics to a minimum.</p>
         <p>4. Be a kind person and respect the opinions of others. Hate talk and racial slurs are forbidden.</p>
-        <p>5. Piracy is not supported. General discussions about piracy are allowed, but you are not allowed to link to pirate repos or pirated packages. Encouraging users to pirate is not allowed.</p>
+        <p>5. Piracy is not supported. You may have general discussion about piracy. You may not link to repos or packages, encouraging, or hint at piracy.</p>
       </div>
       <div>
         <p>If you have any questions or concerns, please contact an admin via a direct message.</p>
