--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -17,6 +17,13 @@
       <p>Glyphs Changelog</p>
     </block>
 
+    <label>Version 1.26 (9/2/2016)</label>
+    <fieldset>
+      <div>
+        <p>Update Hide Icon Labels</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.25 (8/22/2016)</label>
     <fieldset>
       <div>
