--- a/depictions/com.cj81499.BarelyRounded/changelog.html
+++ b/depictions/com.cj81499.BarelyRounded/changelog.html
@@ -17,6 +17,14 @@
       <p>BarelyRounded Changelog</p>
     </block>
 
+    <label>Version 1.5 (8/22/2016)</label>
+    <fieldset>
+      <div>
+        <p>Added Docks (iPhone 6 only for now. Untested.)</p>
+        <p>Removed useless psd files.</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.4 (8/22/2016)</label>
     <fieldset>
       <div>
