cjGlyphs 1.47 and Glyphs 1.27
Glyphs
    Wallpaper
cjGlyphs
    It's been a while. I hope the larger than normal number of icons
somewhat makes up for that.
    Added Settings Theme! (Super early version. Needs revision)
    Added Coolors, Euchre 3D, Bitmoji, uMagic, Bloons TD (4, 5, and
Battles), Gboard, 2048, Infinity Loop, Eluo, Speedtest.net, Narwhal,
Vainglory, Tunnelbear
    Updated Netflix

--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -17,6 +17,16 @@
       <p>cjGlyphs Changelog</p>
     </block>
 
+    <label>Version 1.48 (4/15/2017)</label>
+    <fieldset>
+      <div>
+        <p>It's been a while. I hope the larger than normal number of icons somewhat makes up for that.</p>
+        <p>Added Settings Theme! (Super early version. Needs revision)</p>
+        <p>Added Coolors, Euchre 3D, Bitmoji, uMagic, Bloons TD (4, 5, and Battles), Gboard, 2048, Infinity Loop, Eluo, Speedtest.net, Narwhal, Vainglory, Tunnelbear</p>
+        <p>Updated Netflix</p>
+      </div>
+    </fieldset>
+
     <label>Version 1.47 (8/22/2016)</label>
     <fieldset>
       <div>
@@ -199,7 +209,7 @@
     <label>Versions 1.0 - 1.23 (1/2/15 - 10/17/15)</label>
     <fieldset>
       <div>
-        <p><a href="https://docs.google.com/document/d/1a9sFh57R0qCcLWptkqTExtX5jUo5bKrnTuuIwjSAhdA" target="_new">Older Changes</a></p>
+        <p><a href="https://docs.google.com/document/d/1a9sFh57R0qCcLWptkqTExtX5jUo5bKrnTuuIwjSAhdA">Older Changes</a></p>
       </div>
     </fieldset>
 
