--- a/depictions/com.cj81499.cjGlyphs/index.html
+++ b/depictions/com.cj81499.cjGlyphs/index.html
@@ -17,11 +17,11 @@
     <fieldset>
       <div>
         <p>This theme was made by and is being hosted by cj81499.</p>
-        <p><a href="https://www.reddit.com/r/iOSthemes/comments/2r45jz/custom_glyphsgotham_icons/" target="_new">Reddit Post</a></p>
-        <p><a href="https://docs.google.com/document/d/1J-kl6YXp7kNIt1NaXjKfahUIaFV-T-N2SPfaSK5m4Ns/edit?pli=1" target=new> Icon Requests</a></p>
+        <p><a href="https://www.reddit.com/r/iOSthemes/comments/2r45jz/custom_glyphsgotham_icons/">Reddit Post</a></p>
+        <p><a href="https://docs.google.com/document/d/1J-kl6YXp7kNIt1NaXjKfahUIaFV-T-N2SPfaSK5m4Ns/edit?pli=1"> Icon Requests</a></p>
         <p>If you want to use the included icons for something, contact me and ask permission.</p>
-        <p>If you post a setup using this pack, I appreciate being credited. I'm <a href="https://www.reddit.com/user/cj81499" target="_new">/u/cj81499</a> on Reddit and <a href="https://twitter.com/cjMakesIcons" target="_new">@cjMakesIcons</a> on Twitter.</p>
-        <p>Alternate icons have "ALT" after the @2x. Any time I make another style for an icon, it either replaces the default if I like it better, or becomes an ALT. I usually add an ALT or two each update, but I don't include them in the changelog. You can rename the ALT to the default's name using iFile or Filza if you prefer the ALT over the default.</p>
+        <p>If you post a setup using this pack, I appreciate being credited. I'm <a href="https://www.reddit.com/user/cj81499">/u/cj81499</a> on Reddit and <a href="https://twitter.com/cjMakesIcons">@cjMakesIcons</a> on Twitter.</p>
+        <p>Alternate icons have "ALT" after the @2x. When I make another style for an icon, it either replaces the default or becomes an ALT. I don't include new ALTs in the changelog. Remove the ALT after the @2x to use it instead of the default.</p>
       </div>
       <a href="./screenshots.html">
         <img class="icon" src="../resources/icons/screenshots.png" width="58" height="58">
