Update cjGlyphs Screenshots

--- a/depictions/com.cj81499.cjGlyphs/screenshots.html
+++ b/depictions/com.cj81499.cjGlyphs/screenshots.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Screenshots</title>
-  <base target="_top">
-  <link rel="stylesheet" type="text/css" href="../resources/css/style.css"/>
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="format-detection" content="telephone=no">
-  <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
+	<meta charset="utf-8">
+	<title>Screenshots</title>
+	<base target="_top">
+	<link rel="stylesheet" type="text/css" href="../resources/css/style.css" />
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="format-detection" content="telephone=no">
+	<script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
 <body class="pinstripe">
-  <panel>
-
-    <label>Screenshots</label>
-    <fieldset>
-      <div>
-        <center>
-
-          <img src="./screenshots/1.png" width="100%">
-          <p><a href="http://cj81499.github.io/depictions/resources/contact" target="_new">cj81499</a> - Personal Setup</p>
-          <br>
-
-          <img src="./screenshots/2.png" width="100%">
-          <p><a href="https://www.reddit.com/user/TruthandLogic" target="_new">TruthandLogic</a> - <a href="https://www.reddit.com/r/iOSthemes/comments/3yoc5m/setup_visionary_nsfw/" target="_new">Visionary Setup [NSFW]</a></p>
-
-        </center>
-      </div>
-    </fieldset>
-
-  </panel>
+	<panel>
+		<label>Screenshots</label>
+		<fieldset>
+			<div>
+				<center>
+                    <img src="https://pbs.twimg.com/media/C7bIsqiU8AEB3eB.jpg" width="100%">
+					<p>
+						<a href="https://twitter.com/jb_kadowakey" target="_blank">KDO</a> -
+						<a href="https://twitter.com/jb_kadowakey/status/844082659437424640/photo/1" target="_blank">Setup</a>
+					</p>
+                    <br>
+					<img src="./screenshots/1.png" width="100%">
+					<p>
+						<a href="http://cj81499.github.io/depictions/resources/contact" target="_blank">cj81499</a> - Personal Setup
+					</p>
+					<br>
+					<img src="./screenshots/2.png" width="100%">
+					<p>
+						<a href="https://www.reddit.com/user/TruthandLogic" target="_blank">TruthandLogic</a> -
+						<a href="https://www.reddit.com/r/iOSthemes/comments/3yoc5m/setup_visionary_nsfw/" target="_blank">Visionary Setup [NSFW]</a>
+					</p>
+				</center>
+			</div>
+		</fieldset>
+	</panel>
 </body>
+
 </html>
