html and css cleanup

--- a/depictions/com.cj81499.BarelyRounded/index.html
+++ b/depictions/com.cj81499.BarelyRounded/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>BarelyRounded</title>
   <base target="_top">
-  <link rel="stylesheet" type="text/css" href="../resources/css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="../resources/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
@@ -16,7 +17,9 @@
     <label>Info</label>
     <fieldset>
       <div>
-        <p>Icon mask and shadow requested on reddit <a href="https://www.reddit.com/r/iOSthemes/comments/3nrehu/question_can_somebody_make_this_android_type_icon/" target="new">here</a>.</p>
+        <p>Icon mask and shadow requested on reddit
+          <a href="https://www.reddit.com/r/iOSthemes/comments/3nrehu/question_can_somebody_make_this_android_type_icon/"
+            target="new">here</a>.</p>
       </div>
       <a href="./screenshots.html">
         <img class="icon" src="../resources/icons/screenshots.png" width="58" height="58">
@@ -85,4 +88,5 @@
   </panel>
   <script type="text/javascript" src="../resources/js/iosver.js"></script>
 </body>
+
 </html>
