--- a/depictions/com.cj81499.OriginalAnemone/screenshots.html
+++ b/depictions/com.cj81499.OriginalAnemone/screenshots.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Screenshots</title>
-  <link rel="stylesheet" type="text/css" href="../resources/css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="../resources/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
@@ -11,10 +12,15 @@
   <panel>
 
     <label>Screenshots</label>
-    <fieldset><div><center>
-      <img src="./screenshots/1.png">
-    </center></div></fieldset>
+    <fieldset>
+      <div>
+        <center>
+          <img src="./screenshots/1.png">
+        </center>
+      </div>
+    </fieldset>
 
   </panel>
 </body>
+
 </html>
