--- a/depictions/com.cj81499.PebbleStatus.OG/index.html
+++ b/depictions/com.cj81499.PebbleStatus.OG/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>PebbleStatus OG</title>
   <base target="_top">
-  <link rel="stylesheet" type="text/css" href="../resources/css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="../resources/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
@@ -16,9 +17,11 @@
     <label>Info</label>
     <fieldset>
       <div>
-        <p>This theme was made by and is being hosted by cj81499 (<a href="https://twitter.com/cjMakesIcons" target="_new">Twitter</a>).</p>
+        <p>This theme was made by and is being hosted by cj81499 (
+          <a href="https://twitter.com/cjMakesIcons" target="_new">Twitter</a>).</p>
         <p>Only works with @2x devices</p>
-        <p>Also check out <a href="cydia://package/com.cj81499.PebbleStatus.Time" target="_new">Pebble Time PebbleStatus Theme</a>.</p>
+        <p>Also check out
+          <a href="cydia://package/com.cj81499.PebbleStatus.Time" target="_new">Pebble Time PebbleStatus Theme</a>.</p>
       </div>
       <a href="./screenshots.html">
         <img class="icon" src="../resources/icons/screenshots.png" width="58" height="58">
@@ -87,4 +90,5 @@
   </panel>
   <script type="text/javascript" src="../resources/js/iosver.js"></script>
 </body>
+
 </html>
