--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Changelog</title>
   <base target="_top">
-  <link rel="stylesheet" type="text/css" href="../resources/css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="../resources/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
@@ -22,7 +23,8 @@
       <div>
         <p>It's been a while. I hope the larger than normal number of icons somewhat makes up for that.</p>
         <p>Added Settings Theme! (Super early version. Needs revision)</p>
-        <p>Added Coolors, Euchre 3D, Bitmoji, uMagic, Bloons TD (4, 5, and Battles), Gboard, 2048, Infinity Loop, Eluo, Speedtest.net, Narwhal, Vainglory, Tunnelbear</p>
+        <p>Added Coolors, Euchre 3D, Bitmoji, uMagic, Bloons TD (4, 5, and Battles), Gboard, 2048, Infinity Loop, Eluo, Speedtest.net,
+          Narwhal, Vainglory, Tunnelbear</p>
         <p>Updated Netflix</p>
       </div>
     </fieldset>
@@ -59,7 +61,9 @@
     <label>Version 1.43 (4/6/2016)</label>
     <fieldset>
       <div>
-        <p>Added Game 4 2, Fussball.de, Kicktipp, Flashscore, Multi-Year Weight Training, Quizduell, Spiegel Online, Spox, Comdirect Banking</p>
+        <p>Added Game 4 2, Fussball.de, Kicktipp, Flashscore, Multi-Year Weight Training, Quizduell, Spiegel Online, Spox, Comdirect
+          Banking
+        </p>
         <p>Updated Clash Royale, iCleaner Pro, Passbook/Wallet (I was wrong about being happy. I think I am now though.)</p>
       </div>
     </fieldset>
@@ -113,7 +117,8 @@
     <label>Version 1.36 (1/10/2016)</label>
     <fieldset>
       <div>
-        <p>Added Calendars by Readdle, Rhapsody, Star Wars: Commander, Practice+, Twitterrific, Mathletics Student, Creepy Pasta Wiki, Puffin Browser, Agape</p>
+        <p>Added Calendars by Readdle, Rhapsody, Star Wars: Commander, Practice+, Twitterrific, Mathletics Student, Creepy Pasta
+          Wiki, Puffin Browser, Agape</p>
         <p>Updated Tweetbot</p>
       </div>
     </fieldset>
@@ -122,7 +127,8 @@
     <fieldset>
       <div>
         <p>Added Black Version (I haven't tested this much. Please report any issues.)</p>
-        <p>Added 19 new icons: AntRec, Terminal, Appster, JW Library, CloudBeats, Chunky Comic Reader, PDF Expert 5, Bundlr, MovieBox, Alto's Adventure, Screenshot Maker Pro, Glit, CVS Pharmacy, USAA, Venmo, Citi, Line, Viber, Camfrog</p>
+        <p>Added 19 new icons: AntRec, Terminal, Appster, JW Library, CloudBeats, Chunky Comic Reader, PDF Expert 5, Bundlr,
+          MovieBox, Alto's Adventure, Screenshot Maker Pro, Glit, CVS Pharmacy, USAA, Venmo, Citi, Line, Viber, Camfrog</p>
       </div>
     </fieldset>
 
@@ -209,10 +215,13 @@
     <label>Versions 1.0 - 1.23 (1/2/15 - 10/17/15)</label>
     <fieldset>
       <div>
-        <p><a href="https://docs.google.com/document/d/1a9sFh57R0qCcLWptkqTExtX5jUo5bKrnTuuIwjSAhdA">Older Changes</a></p>
+        <p>
+          <a href="https://docs.google.com/document/d/1a9sFh57R0qCcLWptkqTExtX5jUo5bKrnTuuIwjSAhdA">Older Changes</a>
+        </p>
       </div>
     </fieldset>
 
   </panel>
 </body>
+
 </html>
