--- a/depictions/com.tokems.Glyphs/index.html
+++ b/depictions/com.tokems.Glyphs/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Glyphs</title>
   <base target="_top">
-  <link rel="stylesheet" type="text/css" href="../resources/css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="../resources/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
@@ -16,8 +17,12 @@
     <label>Info</label>
     <fieldset>
       <div>
-        <p>This theme was made by tokems (<a href="http://tokemsaurus.tumblr.com" target="_new">Blog</a> - <a href="http://tokemsaurus.tumblr.com/info" target="_new">Other Places</a>) and is being hosted by cj81499 (<a href="https://twitter.com/cjMakesIcons" target="_new">Twitter</a>).</p>
-        <p>The icon theme was taken from tokems' website, the control center was taken from hoenir's repo, and the theme was updated to work with iOS 8 by cj81499.</p>
+        <p>This theme was made by tokems (
+          <a href="http://tokemsaurus.tumblr.com" target="_new">Blog</a> -
+          <a href="http://tokemsaurus.tumblr.com/info" target="_new">Other Places</a>) and is being hosted by cj81499 (
+          <a href="https://twitter.com/cjMakesIcons" target="_new">Twitter</a>).</p>
+        <p>The icon theme was taken from tokems' website, the control center was taken from hoenir's repo, and the theme was
+          updated to work with iOS 8 by cj81499.</p>
         <p>A wallpaper for iPhone 5 or iPhone 6 is available at "Library/Themes/Glyphs - iOS 8.theme/Wallpaper".</p>
         <p>Contains a Polus compatible CC theme.</p>
       </div>
@@ -88,4 +93,5 @@
   </panel>
   <script type="text/javascript" src="../resources/js/iosver.js"></script>
 </body>
+
 </html>
