--- a/depictions/resources/donate.html
+++ b/depictions/resources/donate.html
@@ -10,12 +10,12 @@
     <meta name="format-detection" content="telephone=no">
     <script type="text/javascript" src="./js/thankssaurik.js"></script>
     <script>
-    function sleep(ms) {
-        return new Promise(resolve => setTimeout(resolve, ms));
-    }
-    sleep(5000).then(() => {
-        window.location.replace("https://www.paypal.me/cjMakesIcons")
-    });
+        function sleep(ms) {
+            return new Promise(resolve => setTimeout(resolve, ms));
+        }
+        sleep(5000).then(() => {
+            window.location.replace("https://www.paypal.me/cjMakesIcons")
+        });
     </script>
 </head>
 
@@ -24,9 +24,12 @@
         <label>Donate</label>
         <fieldset>
             <div>
-                <div><label>
-			<p>If you would like to donate, you can send money using PayPal to <a href="mailto:cjMakesIcons@gmail.com">cjMakesIcons@gmail.com</a>. This page will redirect to a paypal.me page momentarily. Thanks!</p>
-		</label></div>
+                <div>
+                    <label>
+                        <p>If you would like to donate, you can send money using PayPal to
+                            <a href="mailto:cjMakesIcons@gmail.com">cjMakesIcons@gmail.com</a>. This page will redirect to a paypal.me page momentarily. Thanks!</p>
+                    </label>
+                </div>
             </div>
         </fieldset>
     </panel>
