--- a/depictions/com.jacopoiuytr.Mandolino/screenshots.html
+++ b/depictions/com.jacopoiuytr.Mandolino/screenshots.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Screenshots</title>
   <base target="_top">
-  <link rel="stylesheet" type="text/css" href="../resources/css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="../resources/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
@@ -19,7 +20,9 @@
         <center>
 
           <img src="./screenshots/1.png" width="100%">
-          <p style="font-family: HelveticaNeue">Screenshot from <a href="https://www.reddit.com/r/iOSthemes/comments/3o4ww7/setup_mandolino_ocean/cvud2w7" target="_new">here</a>. Setup by <a href="https://www.reddit.com/user/ReadyBasher01" target="_new">/u/ReadyBasher01</a>.</p>
+          <p style="font-family: HelveticaNeue">Screenshot from
+            <a href="https://www.reddit.com/r/iOSthemes/comments/3o4ww7/setup_mandolino_ocean/cvud2w7" target="_new">here</a>. Setup by
+            <a href="https://www.reddit.com/user/ReadyBasher01" target="_new">/u/ReadyBasher01</a>.</p>
 
           <br>
           <br>
@@ -31,4 +34,5 @@
 
   </panel>
 </body>
+
 </html>
