--- a/depictions/resources/help.html
+++ b/depictions/resources/help.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>Help</title>
 	<base target="_top">
-	<link rel="stylesheet" type="text/css" href="./css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="./css/style.css" />
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
 	<script type="text/javascript" src="./js/thankssaurik.js"></script>
@@ -25,7 +26,9 @@
 			<div>
 				<p>Winterboard:</p>
 				<p>Enable "WB Patch" above all other themes (assuming the theme includes one)</p>
-				<p>Install <a href="https://cydia//package/com.bensge.customclockicon" target="_new">Custom Clock Icon</a> or <a href="https://cydia//package/org.coolstar.customclock" target="_new">CustomClock</a> for the clock hands to be themed</p>
+				<p>Install
+					<a href="https://cydia//package/com.bensge.customclockicon" target="_new">Custom Clock Icon</a> or
+					<a href="https://cydia//package/org.coolstar.customclock" target="_new">CustomClock</a> for the clock hands to be themed</p>
 				<p>Try Anemone instead</p>
 			</div>
 		</fieldset>
@@ -46,16 +49,20 @@
 		<label>Activator Icon</label>
 		<fieldset>
 			<div>
-				<p>Follow <a href="https://www.reddit.com/r/iOSthemes/comments/2rdwdp/me1_activator_icon0_how_to_theme_the_stubborn/?" target="_new">this tutorial</a> for Activator to be themed.</p>
+				<p>Follow
+					<a href="https://www.reddit.com/r/iOSthemes/comments/2rdwdp/me1_activator_icon0_how_to_theme_the_stubborn/?" target="_new">this tutorial</a> for Activator to be themed.</p>
 			</div>
 		</fieldset>
 
 		<label>If All Else Fails</label>
 		<fieldset>
 			<div>
-				<p><a href="https://cj81499.github.io/depictions/contact.html" target="_new">Contact Me</a></p>
+				<p>
+					<a href="https://cj81499.github.io/depictions/contact.html" target="_new">Contact Me</a>
+				</p>
 			</div>
 		</fieldset>
 	</panel>
 </body>
+
 </html>
